# GL-SLAM

./: .gitignore  CMakeLists.txt
Old/: tensorrt_inference.h
docs/old_main_for_testing/: .engine_file_builder_using_library.txt  engine_file_builder_code.txt  tensorrt_lightglue_inference_code_old.txt
docs/old_unorganized/: 1img_1pnp.txt  3images_poseinit_pnp.txt  4image_pnp.txt  4image_pnp_ba.txt  5_point_multiple images_corrected_T.txt  current_5_point_latest.txt  current_5_point_noBA.txt  old.7.txt  old.txt  old2.txt  old3.txt  old4.txt  old5.txt  old6.txt  old8.txt  optimized_pre_ba  simplest_5_point_with_corrected_T.txt
include/core/: TensorRTEngineBuilder.h  keypt2subpx.h  lightglue.h  slam_core.h  slam_types.h  superpoint.h
include/threading/: thread_pool.h
include/visualization/: visualization.h
src/: main.cpp  main.old  main_inference.txt  mult_img_recoverpose_single_ba  superpoint_inference.txt
src/core/: TensorRTEngineBuilder.cpp  keypt2subpx.cpp  lightglue.cpp  slam_core.cpp  slam_types.cpp  superpoint.cpp  tensorrt_inference.cpp
src/threading/: thread_pool.cpp
src/visualization/: visualization.cpp
